fix: letter spacing in titles

--- a/online-zoo/assets/styles/pages/_donate.scss
+++ b/online-zoo/assets/styles/pages/_donate.scss
@@ -123,6 +123,7 @@
 			}
 			@include mobile {
 				padding-bottom: 10px;
+				letter-spacing: 0.9px;
 			}
 		}
 
@@ -141,6 +142,7 @@
 				font-size: 16px;
 				line-height: 140%;
 				padding-bottom: 15px;
+				letter-spacing: 0.3px;
 			}
 		}
 
