--- a/online-zoo/pages/donate/main.css
+++ b/online-zoo/pages/donate/main.css
@@ -1133,6 +1133,7 @@ header .background {
 @media (max-width: 639px) {
   .donation .donate-wrapper h2 {
     padding-bottom: 10px;
+    letter-spacing: 0.9px;
   }
 }
 .donation .donate-wrapper h4 {
@@ -1156,6 +1157,7 @@ header .background {
     font-size: 16px;
     line-height: 140%;
     padding-bottom: 15px;
+    letter-spacing: 0.3px;
   }
 }
 .donation .donate-wrapper .money-amount {
